--- a/src/styles/snakeUI.css
+++ b/src/styles/snakeUI.css
@@ -1,41 +1,57 @@
 /* UI-related styles */
 
 .App {
-    text-align: center;
-    padding: 20px;
+  text-align: center;
+  padding: 20px;
+}
+
+h2 {
+  color: #fff;
+}
+
+.start-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  margin-top: 20px;
+  outline: none;
+  transition: background-color 0.3s;
+}
+
+.start-button:hover {
+  background-color: #45a049;
+}
+
+.score {
+  color: #fff;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.game-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+/* Hide the game container on smaller screens */
+@media screen and (max-width: 768px) {
+  .game-container {
+      display: none;
   }
-  
-  h2 {
-    color: #fff;
-  }
-  
-  button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    outline: none;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
-  .score {
-    color: #fff;
-    font-size: 24px;
-    margin-top: 10px;
-  }
-  
-  @media (max-width: 600px) {
-    canvas {
+}
+
+@media (max-width: 600px) {
+  canvas {
       width: 100%;
       height: auto;
-    }
   }
-  
+}
